add default endpoint and its controller

--- a/spotify1/package.json
+++ b/spotify1/package.json
@@ -1,11 +1,13 @@
 {
   "name": "basic-spotify-api",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "https://github.com/Carolis/generic-apis",
   "author": "Carolina Ale",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "node ./src/app.js"
   }
 }
