--- a/spotify1/package.json
+++ b/spotify1/package.json
@@ -5,9 +5,10 @@
   "author": "Carolina Ale",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
   },
   "scripts": {
-    "start": "node ./src/app.js"
+    "start": "nodemon ./src/app.js"
   }
 }
